--- a/src/App.css
+++ b/src/App.css
@@ -15,3 +15,15 @@
     height:100%;
     width:100%;
   }
+
+  [data-aos="skill-animation"] {
+    opacity: 0;
+    transform: rotate(270deg);
+    transform-origin: 30% 50%;
+    transition-property: transform, opacity;
+  
+    &.aos-animate {
+      opacity: 1;
+      transform: translate3d(0, -200px, 0) rotate(270deg);
+    }
+  }
