--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,95 @@
-.embla {
-    overflow: hidden;
+
+  .small .embla {
     height:100%;
     width:100%;
+    max-width: 48rem;
+    margin: auto;
+    --slide-height: 19rem;
+    --slide-spacing: 1rem;
+    --slide-size: 100%;
+  }
+  .small .embla__viewport {
+    height:100%;
+    width:100%;
+    overflow: hidden;
+  }
+  .small .embla__container {
+    height:100%;
+    width:100%;
+    backface-visibility: hidden;
+    display: flex;
+    touch-action: pan-y pinch-zoom;
+    margin-left: calc(var(--slide-spacing) * -1);
+  }
+  .small .embla__slide {
+    flex: 0 0 var(--slide-size);
+    min-width: 0;
+    padding-left: 1.5rem;
+    /* padding-left: var(--slide-spacing); */
+  }
+
+  .big .embla {
+    height:100%;
+    width:100%;
+    max-width: 48rem;
+    margin: auto;
+    --slide-height: 19rem;
+    --slide-spacing: 1rem;
+    --slide-size: 50%;
+  }
+  .big .embla__viewport {
+    height:100%;
+    width:100%;
+    overflow: hidden;
+  }
+  .big .embla__container {
+    height:100%;
+    width:100%;
+    backface-visibility: hidden;
+    display: flex;
+    touch-action: pan-y pinch-zoom;
+    margin-left: calc(var(--slide-spacing) * -1);
+  }
+  .big .embla__slide {
+    flex: 0 0 var(--slide-size);
+    min-width: 0;
+    padding-left: 1.5rem;
+    /* padding-left: var(--slide-spacing); */
+    overflow: visible;
+  }
+
+  /* .embla {
+    max-width: 48rem;
+    margin: auto;
+    --slide-height: 19rem;
+    --slide-spacing: 1rem;
+    --slide-size: 50%;
+  }
+  .embla__viewport {
+    overflow: hidden;
   }
   .embla__container {
+    backface-visibility: hidden;
     display: flex;
-    height:100%;
-    width:100%;
+    touch-action: pan-y pinch-zoom;
+    margin-left: calc(var(--slide-spacing) * -1);
   }
   .embla__slide {
-    flex: 0 0 100%;
+    flex: 0 0 var(--slide-size);
     min-width: 0;
-    margin-left: 10px;
-    height:100%;
-    width:100%;
+    padding-left: var(--slide-spacing);
   }
+  .embla__slide__number {
+    box-shadow: inset 0 0 0 0.2rem var(--detail-medium-contrast);
+    border-radius: 1.8rem;
+    font-size: 4rem;
+    font-weight: 600;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: var(--slide-height);
+  } */
+  
 
   [data-aos="skill-animation"] {
     opacity: 0;
@@ -25,13 +100,5 @@
     &.aos-animate {
       opacity: 1;
       transform: translate3d(0, -200px, 0) rotate(270deg);
-    }
-  }
-
-  [data-aos="project-animation"] {
-    transform: translate3d(-600px, 0, 0);
-    transition-property: transform;
-    &.aos-animate {
-      transform: translate3d(0, 0, 0);
     }
   }
