--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   .small .embla {
     height:100%;
     width:100%;
-    max-width: 48rem;
+    /* max-width: 48rem; */
     margin: auto;
     --slide-height: 19rem;
     --slide-spacing: 1rem;
