--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Alatsi&family=Do+Hyeon&family=Karla:ital,wght@0,200..800;1,200..800&family=Nanum+Myeongjo:wght@400;700&family=Noto+Sans+KR:wght@100..900&family=Playfair+Display:ital,wght@0,500;1,500&display=swap');
+
 
   .small .embla {
     height:100%;
@@ -57,38 +59,6 @@
     /* padding-left: var(--slide-spacing); */
     overflow: visible;
   }
-
-  /* .embla {
-    max-width: 48rem;
-    margin: auto;
-    --slide-height: 19rem;
-    --slide-spacing: 1rem;
-    --slide-size: 50%;
-  }
-  .embla__viewport {
-    overflow: hidden;
-  }
-  .embla__container {
-    backface-visibility: hidden;
-    display: flex;
-    touch-action: pan-y pinch-zoom;
-    margin-left: calc(var(--slide-spacing) * -1);
-  }
-  .embla__slide {
-    flex: 0 0 var(--slide-size);
-    min-width: 0;
-    padding-left: var(--slide-spacing);
-  }
-  .embla__slide__number {
-    box-shadow: inset 0 0 0 0.2rem var(--detail-medium-contrast);
-    border-radius: 1.8rem;
-    font-size: 4rem;
-    font-weight: 600;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: var(--slide-height);
-  } */
   
 
   [data-aos="skill-animation"] {
